--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -53,6 +53,9 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+      - run: |
+          corepack enable
+          pnpm --version
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
