--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,6 +1,7 @@
 {
-  "name": "",
-  "short_name": "",
+  "name": "Personal Site",
+  "short_name": "Personal Site",
+  "start_url": "/",
   "icons": [
     { "src": "/android-chrome-192x192.png", "sizes": "192x192", "type": "image/png" },
     { "src": "/android-chrome-512x512.png", "sizes": "512x512", "type": "image/png" }
