--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "jest-preview": "jest-preview",
     "lint": "yarn lint:code && yarn lint:styles",
     "lint:code": "next lint --max-warnings 0",
     "lint:styles": "stylelint '{**/*,*}.css' --ignore-path .gitignore",
     "prepare": "husky",
-    "test": "jest"
+    "tailwind:temp": "yarn tailwindcss -i ./app/globals.css -o ./test-utils/temp.css",
+    "test": "yarn tailwind:temp && jest",
+    "test:dev": "yarn tailwind:temp && jest --watch"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
@@ -36,9 +39,12 @@
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.14",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -49,10 +55,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.8.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-testing-library": "^6.3.0",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-preview": "^0.3.1",
     "lint-staged": "^15.2.9",
     "postcss": "^8",
     "prettier": "^3.3.3",
