--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Personal Site",
   "short_name": "Personal Site",
-  "start_url": "/personal-site",
+  "start_url": "/",
   "icons": [
-    { "src": "/personal-site/android-chrome-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/personal-site/android-chrome-512x512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "/android-chrome-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/android-chrome-512x512.png", "sizes": "512x512", "type": "image/png" }
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
