--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "url": "git+https://github.com/kmarple1/personal-site.git"
   },
   "packageManager": "yarn@4.4.0",
+  "sideEffects": [
+    "*.css"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -23,7 +26,9 @@
     "prepare": "husky",
     "tailwind:temp": "yarn tailwindcss -i ./app/globals.css -o ./test-utils/temp.css",
     "test": "yarn tailwind:temp && jest",
-    "test:dev": "yarn tailwind:temp && jest --watch"
+    "test:dev": "yarn tailwind:temp && jest --watch",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
@@ -34,8 +39,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@chromatic-com/storybook": "1.8.0",
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/addon-themes": "8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/nextjs": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/test": "^8.2.9",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.14",
     "@testing-library/dom": "^10.4.0",
@@ -56,6 +71,7 @@
     "eslint-plugin-jest": "^28.8.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-testing-library": "^6.3.0",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
@@ -65,6 +81,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
+    "storybook": "^8.2.9",
     "stylelint": "^16.8.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
